--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,15 @@ jobs:
       with:
         go-version: 1.19
 
+    - name: Cache Go modules
+      uses: actions/cache@v2
+      with:
+        path: |
+          ${{ runner.workspace }}/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.mod') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+
     - name: Build
       run: go build -v ./...
 
