--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,5 +26,8 @@ jobs:
     - name: Lint
       run: go vet ./...
 
+    - name: Install Poppler
+      run: sudo apt-get update && sudo apt-get install -y poppler-utils
+
     - name: Test
       run: go test -v ./...
